5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1692_1100.log
== SUBMITION (2019-05-02 10:13:12) 
-- CODE:
cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- EXECUTION TIME:
0.152052
-- ERROR:
  File "/home/codebench/codes/1692/1100/main.py", line 24
    print("Animal: "Onca-pintada")
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:14:02) 
-- CODE:
cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- EXECUTION TIME:
0.225929
-- ERROR:
  File "/home/codebench/codes/1692/1100/main.py", line 24
    print("Animal: "Onca-pintada")
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:14:10) 
-- CODE:
cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- ERROR:
File "XXXX", line 24
    print("Animal: "Onca-pintada")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:15:14) 
-- CODE:
cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: "Onca pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- ERROR:
File "XXXX", line 24
    print("Animal: "Onca pintada")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:16:00) 
-- CODE:
cedula=int(input("valor"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ",Onca-pintada)
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:16:03) 
-- CODE:
cedula=int(input("valor"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ",Onca-pintada)
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- EXECUTION TIME:
0.176478
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:16:10) 
-- CODE:
cedula=int(input("valor"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ",Onca-pintada)
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:16:15) 
-- CODE:
cedula=int(input("valor"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ",Onca-pintada)
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:17:03) 
-- CODE:
cedula=int(input("valor :"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ",Onca-pintada)
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " "Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:17:19) 
-- CODE:
cedula=int(input("valor :"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ",Onca-pintada)
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " "Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:17:35) 
-- CODE:
cedula=int(input("valor :"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ",Onca-pintada)
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " "Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:17:45) 
-- CODE:
cedula=int(input("valor :"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ",Onca-pintada)
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " "Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:17:52) 
-- CODE:
cedula=int(input("valor :"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ",Onca-pintada)
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " "Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:00) 
-- CODE:
cedula=int(input("valor :"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ",Onca-pintada)
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " "Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:21) 
-- CODE:
cedula=int(input("valor :"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ","Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " "Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:30) 
-- CODE:
cedula=int(input("valor :"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ","Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " "Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:18:36) 
-- CODE:
cedula=int(input("valor :"))

Tartaruga=2
Garca=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ","Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " "Invalido")
-- EXECUTION TIME:
0.129358
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
